--- a/app/index.html
+++ b/app/index.html
@@ -96,8 +96,88 @@
             </div>
           </div>
         </header>
-        <div class="content">
-          <div class="content1">KHJBJJBJKBKJKJ</div>
+        <div class="content container">
+          <div class="slider">
+            <div style="text-align: center;"><span class="dot" onclick="currentSlide(1)"></span><span class="dot" onclick="currentSlide(2)"></span><span class="dot" onclick="currentSlide(3)"></span><span class="dot" onclick="currentSlide(4)"></span></div>
+            <div class="slideshow-container">
+              <div class="mySlides fade"><img src="../assets/img/slider1.png" style="width: 100%;">
+                <div class="text">Дверь на дачу</div>
+              </div>
+              <div class="mySlides fade"><img src="../assets/img/slider1.png" style="width: 100%;">
+                <div class="text">Еще одна дверь</div>
+              </div>
+              <div class="mySlides fade"><img src="../assets/img/slider1.png" style="width: 100%;">
+                <div class="text">Супер дверь</div>
+              </div>
+              <div class="mySlides fade"><img src="../assets/img/slider1.png" style="width: 100%;">
+                <div class="text">Лучшая дверь</div>
+              </div>
+            </div>
+          </div>
+          <div class="title">О КОМПАНИИ</div>
+          <main class="main">
+            <div class="main_sidebar">
+              <div class="main_sidebar_item"><a href="#">ГЛАВНАЯ</a></div>
+              <div class="main_sidebar_item"><a class="active" href="#">О КОМПАНИИ</a></div>
+              <div class="main_sidebar_item"><a href="#">КАТАЛОГ ПРОДУКЦИИ</a></div>
+              <div class="main_sidebar_item"><a href="#">ОПЛАТА / ДОСТАВКА</a></div>
+              <div class="main_sidebar_item"><a href="#">АКЦИИ</a></div>
+              <div class="main_sidebar_item"><a href="#">ГАРАНТИЯ</a></div>
+              <div class="main_sidebar_item"><a href="#">КОНТАКТЫ</a></div>
+            </div>
+            <div class="main_bg">
+              <div class="main_bg_text">
+                <p>Повседневная практика показывает, что постоянный количественный рост и</p>сфера нашей активности позволяет оценить значение существенных финансовых и административных условий. Значимость этих проблем
+                настолько очевидна, что консультация с широким активом представляет собой интересный эксперимент проверки
+                направлений прогрессивного развития.
+                <p>Идейные соображения высшего порядка, а также сложившаяся структура</p>организации влечет за собой процесс
+                внедрения и модернизации системы обучения кадров, соответствует насущным потребностям.
+                <p>Таким образом сложившаяся структура организации требуют определения и</p>уточнения направлений прогрессивного
+                развития. С другой стороны сложившаяся структура организации способствует подготовки и реализации системы
+                обучения кадров, соответствует насущным потребностям. Значимость этих проблем настолько очевидна, что
+                укрепление и развитие структуры влечет за собой процесс внедрения и модернизации соответствующий условий
+                активизации.
+                <p>С другой стороны начало повседневной работы по формированию позиции</p>позволяет оценить значение дальнейших
+                направлений развития. Идейные соображения высшего порядка, а также реализация намеченных плановых заданий
+                влечет за собой процесс внедрения и модернизации позиций, занимаемых участниками в отношении поставленных
+                задач. С другой стороны начало повседневной работы по формированию позиции представляет собой интересный
+                эксперимент проверки новых предложений. Равным образом рамки и место обучения кадров в значительной степени
+                обуславливает создание системы обучения кадров, соответствует насущным потребностям.
+                <p>Повседневная практика показывает, что дальнейшее развитие различных</p>форм деятельности в значительной степени
+                обуславливает создание системы обучения кадров, соответствует насущным потребностям. Не следует, однако
+                забывать, что рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в
+                формировании модели развития.
+                <p>Товарищи! начало повседневной работы по формированию позиции позволяет</p>выполнять важные задания по разработке систем массовогоу частия.
+              </div>
+            </div>
+            <div class="main_banner">
+              <div class="main_banner_1">
+                <div class="main_banner_1_phone">Телефон горячей линии <br><span class="big_number">+12(034) 567 89 10 <br></span>(пн.- пт. с 9.00 до 18.00)</div>
+                <div class="main_banner_1_call">
+                  <div class="main_banner_1_call_text1">ВЫЗВАТЬ</div>
+                  <div class="main_banner_1_call_text2">ЗАМЕРЩИКА</div>
+                </div>
+              </div>
+              <div class="main_banner_2"><img src="assets/img/mainBanner2.png">
+                <div class="main_banner_2_text">Банерная
+                  <p>область</p>
+                </div>
+              </div>
+              <div class="main_banner_1">
+                <div class="main_banner_1_phone">Телефон горячей линии <br><span class="big_number">+12(034) 567 89 10 <br></span>(пн.- пт. с 9.00 до 18.00)</div>
+                <div class="main_banner_1_call">
+                  <div class="main_banner_1_call_text1">ВЫЗВАТЬ</div>
+                  <div class="main_banner_1_call_text2">ЗАМЕРЩИКА</div>
+                </div>
+              </div>
+              <div class="main_banner_2"><img src="assets/img/mainBanner2.png">
+                <div class="main_banner_2_text">Банерная
+                  <p>область</p>
+                </div>
+              </div>
+            </div>
+            <div class="bgBottom"></div>
+          </main>
         </div>
       </div>
       <footer class="footer">footer</footer>
