--- a/app/index.html
+++ b/app/index.html
@@ -176,11 +176,19 @@
                 </div>
               </div>
             </div>
-            <div class="bgBottom"></div>
           </main>
         </div>
       </div>
-      <footer class="footer">footer</footer>
+      <footer>
+        <div class="bgBottom">
+          <div class="footer">
+            <div class="footer_container container">
+              <div class="footer_container_year">Nakitel ©2014</div>
+              <div class="footer_container_menu"><a href="#">Контакты</a><a href="#">Акции</a><a href="#">Каталог</a><a href="#">Оплата / Доставка</a><a href="#">Гарантия</a></div>
+            </div>
+          </div>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
