fix header button

--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,11 @@
         <header class="header">
           <div class="red_line">
             <nav class="container">
-              <div class="topnav" id="myTopnav"><a class="icon" href="#" id="menu"><img src="assets/img/menu.png"/></a><a href="#">НА ГЛАВНУЮ</a><a href="#">О КОМПАНИИ</a><a href="#">КАТАЛОГ ПРОДУКЦИИ</a><a href="#">АКЦИИ</a><a href="#">ГАРАНТИЯ</a><a href="#">КОНТАКТЫ</a></div>
+              <div class="topnav" id="myTopnav"><a class="icon" href="#" id="menu"><img src="assets/img/menu.png"/></a>
+                <div class="menuHide">
+                  <div class="menuHide_container"><a href="#">НА ГЛАВНУЮ</a><a href="#">О КОМПАНИИ</a><a href="#">КАТАЛОГ ПРОДУКЦИИ</a><a href="#">АКЦИИ</a><a href="#">ГАРАНТИЯ</a><a href="#">КОНТАКТЫ</a></div>
+                </div>
+              </div>
               <div class="right_side">
                 <div class="cart">
                   <div class="cart_img"><img src="assets/img/cart.png"/></div>
