fix incorrect path to img

--- a/app/index.html
+++ b/app/index.html
@@ -41,7 +41,7 @@
                 </div>
                 <div class="search">
                   <input type="search" placeholder="Поиск"/>
-                  <input type="image" src="../assets/img/search.png"/>
+                  <input type="image" src="assets/img/search.png"/>
                 </div>
               </div>
             </nav>
@@ -77,23 +77,23 @@
             </div>
             <div class="door_panel container">
               <div class="door">
-                <div class="door_img"><img src="../assets/img/door1.png"/></div>
+                <div class="door_img"><img src="assets/img/door1.png"/></div>
                 <div class="door_text1">ДВЕРИ</div>
                 <div class="door_text2">ШПОНИРОВАННЫЕ</div>
               </div>
-              <div class="door"><img src="../assets/img/door2.png"/>
+              <div class="door"><img src="assets/img/door2.png"/>
                 <div class="door_text1">ДВЕРИ</div>
                 <div class="door_text2">ЭКОШПОН</div>
               </div>
-              <div class="door"><img src="../assets/img/door3.png"/>
+              <div class="door"><img src="assets/img/door3.png"/>
                 <div class="door_text1">ДВЕРИ</div>
                 <div class="door_text2">ИЗ МАССИВА</div>
               </div>
-              <div class="door"><img src="../assets/img/door4.png"/>
+              <div class="door"><img src="assets/img/door4.png"/>
                 <div class="door_text1">ДВЕРИ</div>
                 <div class="door_text2">ВХОДНЫЕ</div>
               </div>
-              <div class="door"><img src="../assets/img/door5.png"/>
+              <div class="door"><img src="assets/img/door5.png"/>
                 <div class="door_text1">ДВЕРИ</div>
                 <div class="door_text2">СПЕЦ НАЗНАЧЕНИЯ</div>
               </div>
@@ -104,16 +104,16 @@
           <div class="slider">
             <div style="text-align: center;"><span class="dot" onclick="currentSlide(1)"></span><span class="dot" onclick="currentSlide(2)"></span><span class="dot" onclick="currentSlide(3)"></span><span class="dot" onclick="currentSlide(4)"></span></div>
             <div class="slideshow-container">
-              <div class="mySlides fade"><img src="../assets/img/slider1.png" style="width: 100%;">
+              <div class="mySlides fade"><img src="assets/img/slider1.png" style="width: 100%;">
                 <div class="text">Дверь на дачу</div>
               </div>
-              <div class="mySlides fade"><img src="../assets/img/slider1.png" style="width: 100%;">
+              <div class="mySlides fade"><img src="assets/img/slider1.png" style="width: 100%;">
                 <div class="text">Еще одна дверь</div>
               </div>
-              <div class="mySlides fade"><img src="../assets/img/slider1.png" style="width: 100%;">
+              <div class="mySlides fade"><img src="assets/img/slider1.png" style="width: 100%;">
                 <div class="text">Супер дверь</div>
               </div>
-              <div class="mySlides fade"><img src="../assets/img/slider1.png" style="width: 100%;">
+              <div class="mySlides fade"><img src="assets/img/slider1.png" style="width: 100%;">
                 <div class="text">Лучшая дверь</div>
               </div>
             </div>
